# misis2023f-23-00-polevoi-d-v

./: .gitignore  CMakeLists.txt  status.md
.github/workflows/: main.yml
prj.codeforces/: 0004a.cpp  0004a.v01.cpp  0004a.v02.cpp  0263a.cpp  0617a.v01.cpp  0617a.v02.cpp  0978a.v01.cpp  0978a.v02.cpp  0978b.v01.cpp  0978b.v02.cpp  1330a.cpp  1352a.v01.cpp  1352a.v02.cpp  1717b.cpp  1721b.cpp  1872a.cpp  CMakeLists.txt
prj.lab/: CMakeLists.txt
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.test/: CMakeLists.txt  test_complex.cpp  test_dynarr.cpp  test_rational.cpp
